[package]
name = "space-invaders"
description = "A Space Invader cabinet emulator with supporting toolset"
authors = ["vzwGrey <vzwgrey@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "emu"

[dependencies]
eyre = "0.6.6"
clap = { version = "3.0.14", features = ["derive"] }
sdl2 = "0.35"

[[bin]]
name = "emu"
